[gd_scene load_steps=17 format=3 uid="uid://df817uvv8s7rn"]

[ext_resource type="Script" path="res://Scenes/Level/main.gd" id="1_hbiiv"]
[ext_resource type="PackedScene" uid="uid://4fdk5jxn20hj" path="res://Scenes/Ball/ball.tscn" id="1_r0460"]
[ext_resource type="PackedScene" uid="uid://bt5kob35y02n" path="res://Scenes/Paddle/paddle.tscn" id="1_yjjua"]
[ext_resource type="Texture2D" uid="uid://bv4cbykdu6liq" path="res://Assets/background.png" id="2_f2ndo"]
[ext_resource type="PackedScene" uid="uid://c7kwuwxht38w0" path="res://Scenes/paddle_ai/paddle_ai.tscn" id="2_wpln8"]
[ext_resource type="PackedScene" uid="uid://xny4s1gxsanj" path="res://Scenes/Wall/wall.tscn" id="4_h7yr8"]
[ext_resource type="PackedScene" uid="uid://by0j5a4ssq5uo" path="res://Scenes/HUD/hud.tscn" id="6_wwmph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ciub"]
size = Vector2(20, 692)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pphbb"]
size = Vector2(20, 670)

[sub_resource type="Environment" id="Environment_12283"]
background_mode = 3
tonemap_mode = 3
glow_enabled = true
glow_normalized = true
glow_intensity = 1.51
glow_bloom = 0.2
glow_blend_mode = 0

[sub_resource type="Gradient" id="Gradient_m28t3"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.844156)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_utkeb"]
gradient = SubResource("Gradient_m28t3")
width = 50
height = 200
fill = 1
fill_from = Vector2(0.444444, 0.0128205)
fill_to = Vector2(0.42735, 0.662393)

[sub_resource type="Gradient" id="Gradient_0pr5d"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.435065, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uft7h"]
gradient = SubResource("Gradient_0pr5d")
width = 300
height = 1000
fill = 1
fill_from = Vector2(0.0854701, 0.478632)
fill_to = Vector2(0.897436, 0.487179)

[sub_resource type="Gradient" id="Gradient_oadym"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.876623)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yr7d5"]
gradient = SubResource("Gradient_oadym")
width = 300
height = 500
fill = 1
fill_from = Vector2(0.487179, 0.491453)
fill_to = Vector2(0.840456, 0.0598291)

[node name="Main" type="Node2D"]
script = ExtResource("1_hbiiv")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(576, 326)
scale = Vector2(0.749512, 0.72)
texture = ExtResource("2_f2ndo")

[node name="Ball" parent="." instance=ExtResource("1_r0460")]
position = Vector2(576, 320)

[node name="Paddle" parent="." instance=ExtResource("1_yjjua")]
position = Vector2(27, 320)

[node name="PaddleAI" parent="." instance=ExtResource("2_wpln8")]
position = Vector2(1126, 320)

[node name="Wall" parent="." instance=ExtResource("4_h7yr8")]
position = Vector2(576, 16)

[node name="Wall2" parent="." instance=ExtResource("4_h7yr8")]
position = Vector2(576, 632)

[node name="ScoreZones" type="Node" parent="."]

[node name="ScoreZoneLeft" type="Area2D" parent="ScoreZones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZones/ScoreZoneLeft"]
position = Vector2(-20, 326)
shape = SubResource("RectangleShape2D_5ciub")

[node name="ScoreZoneRight" type="Area2D" parent="ScoreZones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZones/ScoreZoneRight"]
position = Vector2(1172, 332)
shape = SubResource("RectangleShape2D_pphbb")

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" parent="." instance=ExtResource("6_wwmph")]
offset_left = 592.0
offset_top = 32.0
offset_right = 592.0
offset_bottom = 32.0

[node name="Light" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Light"]
environment = SubResource("Environment_12283")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Light"]
color = Color(0.172549, 0.172549, 0.172549, 1)
blend_mode = 2

[node name="WallLights" type="Node" parent="Light"]

[node name="PointLight2D" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(1024, 168)
scale = Vector2(4.74, 3.71)
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D2" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(792, 176)
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D3" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(560, 176)
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D5" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(328, 184)
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D4" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(88, 176)
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D6" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(1034.5, 451)
rotation = -3.14159
scale = Vector2(4.74, 3.71)
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D7" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(802.5, 459)
rotation = -3.14159
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D8" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(570.5, 459)
rotation = -3.14159
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D9" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(338.5, 467)
rotation = -3.14159
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D10" type="PointLight2D" parent="Light/WallLights"]
position = Vector2(98.5, 459)
rotation = -3.14159
scale = Vector2(4.74, 3.71)
energy = 0.54
shadow_enabled = true
texture = SubResource("GradientTexture2D_utkeb")

[node name="PointLight2D" type="PointLight2D" parent="Light"]
position = Vector2(104, 376)
energy = 0.39
blend_mode = 2
shadow_color = Color(0, 0, 0, 0.854902)
texture = SubResource("GradientTexture2D_uft7h")

[node name="PointLight2D2" type="PointLight2D" parent="Light"]
position = Vector2(1056, 387)
rotation = 3.14159
energy = 0.39
blend_mode = 2
shadow_color = Color(0, 0, 0, 0.854902)
texture = SubResource("GradientTexture2D_uft7h")

[node name="PointLight2D3" type="PointLight2D" parent="Light"]
position = Vector2(216, 336)
rotation = -3.14159
energy = 0.39
texture = SubResource("GradientTexture2D_yr7d5")

[node name="PointLight2D4" type="PointLight2D" parent="Light"]
position = Vector2(568, 320)
rotation = -3.14159
energy = 0.39
texture = SubResource("GradientTexture2D_yr7d5")

[node name="PointLight2D5" type="PointLight2D" parent="Light"]
position = Vector2(872, 328)
rotation = -3.14159
energy = 0.39
texture = SubResource("GradientTexture2D_yr7d5")

[connection signal="body_entered" from="ScoreZones/ScoreZoneLeft" to="." method="_on_score_zone_left_body_entered"]
[connection signal="body_entered" from="ScoreZones/ScoreZoneRight" to="." method="_on_score_zone_right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
